--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,6 +29,50 @@ jobs:
     - run: npm i
     - run: npm run build --if-present
     - run: pm2 restart app
+
+    name: Deploy production
+        uses: kostya-ten/ssh-server-deploy@v4
+        env:
+          SSH_PRIVATE_KEY: b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAABlwAAAAdzc2gtcn
+NhAAAAAwEAAQAAAYEA7XY+PgRluJOesGaWzMJuANj9QarH9RrYKe9NTj6OfOPa+VUgenUk
+51CG7bRLvMIeEXjn78dJKT9cYISnl5J29EVUv0mz67QwRFc5Dmco++LNky9hsCXfJu2meC
+v23/t/wnJ3xHZEru4VE74gGiYEYE4XdYLSQ/knZmjs0nP7d6G4YcxtDIinaawXc6w80dn5
+MfiXaSzNGgGOsf/4suS2y8XwMhN084RQ4oxUJfNAEETcDfap9FHSNVBPblTWDluhfvhCsu
+loV5DLNW9XwXFT3VT+pYY6WBuCzBAUAr8JEFft0OykK+T2L8YCpPX7SCbop7kGLKsKQ33B
+EeVQ50QPOEiFKeWO01tmVP0234c2Z9KNgJ3KJ24DWg+BgCIlivQTgVBU7+ECUm4R951vJl
+r7o4R3uPJQhKPDg5JKa+p8Fe1GUWTLKIDTlj/lNo8axrRrz0RE8hCV6deptxbkBm1+8Vzp
+k2Rbi0TINut+00p3Z6Cp9zEAtTHYKdZJ6DsuRh8xAAAFoO6TccLuk3HCAAAAB3NzaC1yc2
+EAAAGBAO12Pj4EZbiTnrBmlszCbgDY/UGqx/Ua2CnvTU4+jnzj2vlVIHp1JOdQhu20S7zC
+HhF45+/HSSk/XGCEp5eSdvRFVL9Js+u0MERXOQ5nKPvizZMvYbAl3ybtpngr9t/7f8Jyd8
+R2RK7uFRO+IBomBGBOF3WC0kP5J2Zo7NJz+3ehuGHMbQyIp2msF3OsPNHZ+TH4l2kszRoB
+jrH/+LLktsvF8DITdPOEUOKMVCXzQBBE3A32qfRR0jVQT25U1g5boX74QrLpaFeQyzVvV8
+FxU91U/qWGOlgbgswQFAK/CRBX7dDspCvk9i/GAqT1+0gm6Ke5BiyrCkN9wRHlUOdEDzhI
+hSnljtNbZlT9Nt+HNmfSjYCdyiduA1oPgYAiJYr0E4FQVO/hAlJuEfedbyZa+6OEd7jyUI
+Sjw4OSSmvqfBXtRlFkyyiA05Y/5TaPGsa0a89ERPIQlenXqbcW5AZtfvFc6ZNkW4tEyDbr
+ftNKd2egqfcxALUx2CnWSeg7LkYfMQAAAAMBAAEAAAGBAJN9uBdJH+1PM2eZsNypfy3jmR
+oqe1xQOieBzWBmFpaX6DCpoSyuiidqqwQF0m0BnS95C4axH04RXs1MV9QbUutSDNtraedi
+2f/4tSWvCZO6QbnD2kdQnpRNU/KcTBC+45HhC2bplquYkVrb4pCbQGiY2JVSlktF/CTt0v
+q8s1qRBjcohCseze0iyMY+GuC1JMTXBSR8gUA/62O/+7cRvEBBR3mzABco/hxY0QNpXUc9
+nfjGVrW8BHa81TlQVExCuJATh2c4DxPAaykoh89hq6kD8QJEXvDt4AGdF8fgGaLSLYiJit
+uENnmqLHFG+uSf6d7UVWQFb2hQLDa6kD90XWZJUapGCp531uByQ3JfcGFawDavPP29sTV2
+oX5lbfgz03x7k9JqmCNXYqyWTREj7EYCawiTHVgT+x/Ef7B65To/D0FUBD3oKXsi6H6RdK
+yxKfy3fg1NeP86daiXc291THGSjMelCwxQWv3q+SNE8yUOZjN/zWDJFh8D2B6QUFue4QAA
+AMEAhxH6yfQggF/2Tmt8A4wBtD//P/nILCARhgV02Q6rseHvgms0Vl8zXzoqoYEWUjuKdt
+u99JNTU0ejgML9PMReIOo8e5/DXzLi2G1Wu1ue8R2tyQS9JEkOHC13IdZUoj7lUrFu47Rr
+Z7JXO89U9HHmT4I0R/2umaOTnulUWbxYK55yOTNoHdx3SyJFedGAKveWViYfJoeTrIXakC
+FBcz+BPVe8zmJvUnH+cSqCY6t0SYAE2SiQLymHXMD6AqcYx9dQAAAAwQD6kDD+lExq51L8
+HE/s+pfIu65CdWv6DJT/JNv9ewdb/YAkXCYe17JgqKWwNC3dOgfe+cp8nnNy3mRIHj/Vt6
+SpeSlvlXQcZ9v9jnYNy3ZXKfQBonicwQ2qEruEFjo0OsYOjPM9YEH4O1T/B/Oz+heO54tX
+W4gbBWTTjqw9qyXvUHEF6dXzU0+fyE6a991+p6s/ef+atGyf5FhYNybrT8S0jDjJJQYyMD
+2153Wx+hFgMdga4jHlpNlCP+MG1/cjOVUAAADBAPKdRwFZ1ifOkajHqQe1uAA5m51bIm46
+fkMR0xN3irLByswNjym5EVwFnXwTJKx6DOcycjx6Mog5565tmxY5QfolZ5qeQify/be8NY
+06YXxx5o1pgPrRFyAFSFyTrxRzn1RBP2wZ7DmMeDHYbKvQ452VQb3pGzsvVhkuX7mIUN+b
+p2uiXg7zYkIVaCKnVNbPpN2dDFH3j4F/kc0TTu303LiQWhaylMuhvvpHzJ2o22TwyvsmKa
+7exaySXqoXilPebQAAACN0aGV3YXJyaW9yQE5pcmFqcy1NYWNCb29rLVByby5sb2NhbAEC
+AwQFBg==
+          host: 138.197.69.102
+          username: 138.197.69.102
+          
     
     
 
